# TimerPomodoro

./: .gitignore  LICENSE  pomodoro_timer.py  pyproject.toml  readme.md
TimerPomodoro/: config.py  main.py  pomodoro_timer.py  sound.py  timerLogich.py  ui.py
script/: build.bat  clean.bat  creaExeUv.bat  crea_exe.bat  pulisci.bat  setUp.bat  test_config.bat
